# src/controllers/CryptoApi.js
@@ -3,9 +3,9 @@
 var utils = require('../utils/writer.js');
 var CryptoApi = require('../service/CryptoService.js');
 
-module.exports.getCryptosById = function (req, res, next) {
+module.exports.getCryptoQuotesById = function (req, res, next) {
   const cryptos = req.swagger.params.cryptos.value;
-  CryptoApi.getCryptosById(cryptos)
+  CryptoApi.getCryptoQuotesById(cryptos)
     .then(function (response) {
       utils.writeJson(res, response);
     })
